# containers.credential-proxy

./: README.md  pyproject.toml
.devcontainer/: compose.dev.yaml  compose.yaml  devcontainer.json
.github/workflows/: build.yaml
src/: Containerfile  injector.py
tests/: test_injector.py
